--- a/.github/workflows/ex-ci.yml
+++ b/.github/workflows/ex-ci.yml
@@ -1,4 +1,4 @@
-name: Practice CI wit XGY | © 2020 by XGY
+name: Practice ex with CI  | © 2020 by XGY
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
